force-app/main/default/objects/EmailUserAction__c/EmailUserAction__c.object-meta.xml
<CustomObject>
    <description>Tracks user-specific actions on emails (seen, pinned, archived, etc.) to prevent cross-user interference</description>
    <label>Email User Action</label>
    <nameField>
        <displayFormat>EUA-{0000000}</displayFormat>
        <label>Email User Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email User Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>