force-app/main/default/objects/EmailUserAction__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The ID of the EmailMessage</description>
    <externalId>true</externalId>
    <label>Email ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>