force-app/main/default/objects/EmailUserAction__c/fields/IsSeen__c.field-meta.xml
<CustomField>
    <fullName>IsSeen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Seen</label>
    <type>Checkbox</type>
</CustomField>