force-app/main/default/objects/EmailUserAction__c/fields/PinnedDate__c.field-meta.xml
<CustomField>
    <fullName>PinnedDate__c</fullName>
    <label>Pinned Date</label>
    <type>DateTime</type>
</CustomField>