force-app/main/default/objects/EmailUserAction__c/fields/SeenDate__c.field-meta.xml
<CustomField>
    <fullName>SeenDate__c</fullName>
    <label>Seen Date</label>
    <type>DateTime</type>
</CustomField>