force-app/main/default/objects/EmailUserAction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>The ID of the user who performed the action</description>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>